# goattrails

./: .gitignore  ALGORITHMS.md  Cargo.toml  DESIGN_DOC.md  README.md  config.toml
configs/: dev.toml
data/: oxfordshire_ish.SRTMGL1.tif
src/: gpx_exporter.rs  grasp_route_generator.rs  main.rs  map_exporter.rs  route_generator.rs
