[package]
name = "goattrails"
version = "0.1.0"
edition = "2024"

[dependencies]
gpx = "0.10.0"
geotiff = "0.1.0"
geo = "0.31.0"
osmpbf = "0.3.6"
petgraph = "0.8.2"
tiff = "0.9"
ndarray = "0.15"
rand = "0.8.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
